LogIn with 3 errors
Still has error
FATAL EXCEPTION: main (Ask Gemini)
                                                                                                    Process: com.example.viamm, PID: 19748
                                                                                                    java.lang.RuntimeException: Unable to start activity ComponentInfo{com.example.viamm/com.example.viamm.LoginActivity}: android.view.InflateException: Binary XML file line #11 in com.example.viamm:layout/activity_login: Binary XML file line #11 in com.example.viamm:layout/activity_login: Error inflating class android.widget.RelativeLayout

Caused by: android.view.InflateException: Binary XML file line #11 in com.example.viamm:layout/activity_login: Binary XML file line #11 in com.example.viamm:layout/activity_login: Error inflating class android.widget.RelativeLayout
                                                                                                    Caused by: android.view.InflateException: Binary XML file line #11 in com.example.viamm:layout/activity_login: Error inflating class android.widget.RelativeLayout
                                                                                                    Caused by: java.lang.reflect.InvocationTargetException

Caused by: android.content.res.Resources$NotFoundException: Drawable com.example.viamm:color/material_dynamic_neutral99 with resource ID #0x7f050210
                                                                                                    Caused by: android.content.res.Resources$NotFoundException: Resource "com.example.viamm:color/material_dynamic_neutral99" (7f050210) is not a Drawable (color or path): TypedValue{t=0x1/d=0x7f050210 a=-1 r=0x7f050210}

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,8 +9,15 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
+annotation = "1.8.0"
+lifecycleLivedataKtx = "2.8.0"
+lifecycleViewmodelKtx = "2.8.0"
+retrofit2 = "2.9.0"
+legacySupportV4 = "1.0.0"
+supportAnnotations = "28.0.0"
 
 [libraries]
+retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit2"}
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -19,6 +26,11 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
+androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
+androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
