--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,29 +18,27 @@
         android:theme="@style/Theme.VIAMM"
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
-        
-        <!-- Edit Order Activity-->
+        <activity
+            android:name=".ScannerActivity"
+            android:exported="false" />
+        <!-- Edit Order Activity -->
         <activity
             android:name=".EditOrderActivity"
             android:exported="true"
-            android:parentActivityName=".OrderActivity"/>
-        <!-- Statistics Activity -->
+            android:parentActivityName=".OrderActivity" /> <!-- Statistics Activity -->
         <activity
             android:name=".StatisticsActivity"
             android:exported="true"
-            android:parentActivityName=".MainActivity"/>
-        <!-- Record Activity -->
+            android:parentActivityName=".MainActivity" /> <!-- Record Activity -->
         <activity
             android:name=".RecordActivity"
             android:exported="true"
-            android:parentActivityName=".MainActivity"/>
-        <!-- Order Activity -->
+            android:parentActivityName=".MainActivity" /> <!-- Order Activity -->
         <activity
             android:name=".OrderActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.VIAMM"
-            android:parentActivityName=".MainActivity"/>
-        <!-- Login Activity -->
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Base.Theme.VIAMM" /> <!-- Login Activity -->
         <activity
             android:name=".LoginActivity"
             android:exported="true"
@@ -50,8 +48,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Main Activity -->
+        </activity> <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
