--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ tensorflowLiteGpu = "2.3.0"
 cameraCore = "1.3.4"
 media3Common = "1.3.1"
 tensorflowLiteSupportVersion = "0.2.0"
+playServicesTfliteGpu = "16.2.0"
 
 [libraries]
 androidx-lifecycle-livedata-ktx-v282 = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtxVersion" }
@@ -66,6 +67,7 @@ tensorflow-lite-gpu = { group = "org.tensorflow", name = "tensorflow-lite-gpu", 
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "cameraCore" }
 androidx-media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3Common" }
 tensorflow-lite-support-v020 = { module = "org.tensorflow:tensorflow-lite-support", version.ref = "tensorflowLiteSupportVersion" }
+play-services-tflite-gpu = { group = "com.google.android.gms", name = "play-services-tflite-gpu", version.ref = "playServicesTfliteGpu" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
