fix: -dependencies updates use "./gradlew dependencyUpdates" to update the dependencies -working with api 29, 35 -for more dependencies udpate info go root/build/dependenciesupdate/report.txt -still have issues with tensorflowlite dependencies usage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,10 +36,10 @@
             android:name=".EditOrderActivity"
             android:exported="true"
             android:parentActivityName=".OrderActivity" />
-        <activity
-            android:name=".StatisticsActivity"
-            android:exported="true"
-            android:parentActivityName=".MainActivity" />
+<!--        <activity-->
+<!--            android:name=".StatisticsActivity"-->
+<!--            android:exported="true"-->
+<!--            android:parentActivityName=".MainActivity" />-->
         <activity
             android:name=".RecordActivity"
             android:exported="true"
