--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-org.gradle.caching=true
-org.gradle.configuration-cache.parallel=true
+#org.gradle.caching=true
+#org.gradle.configuration-cache.parallel=true
 #org.gradle.warning.mode=all
