fix: -fix loginactivity tts -installed vicocharts -created AnalyticsActivity.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,10 +40,7 @@
         <activity
             android:name=".EditOrderActivity"
             android:exported="true"
-            android:parentActivityName=".OrderActivity" /> <!-- <activity -->
-        <!-- android:name=".StatisticsActivity" -->
-        <!-- android:exported="true" -->
-        <!-- android:parentActivityName=".MainActivity" /> -->
+            android:parentActivityName=".OrderActivity" />
         <activity
             android:name=".RecordActivity"
             android:exported="true"
