feat: -added analytics activity contents -removed vico charts, as jetpack compose has built it charts -removed anything related to tflite including dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,18 +24,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
-            android:name=".AnalyticsActivity"
-            android:exported="false"
+            android:name=".charts.AnalyticsActivity"
+            android:exported="true"
             android:label="@string/title_activity_analytics"
-            android:theme="@style/Theme.VIAMM" />
-        <activity
-            android:name=".PaymentActivity"
-            android:exported="true" />
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".EditRecordActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ScannerActivity"
             android:exported="true" />
         <activity
             android:name=".EditOrderActivity"
@@ -50,6 +44,9 @@
             android:exported="true"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Base.Theme.VIAMM" />
+        <activity
+            android:name=".PaymentActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
