--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -47,9 +50,6 @@
             android:exported="true"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Base.Theme.VIAMM" />
-        <activity
-            android:name=".PaymentActivity"
-            android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
